--- a/XamarinRefit/XamarinRefit/Views/LoginPage.xaml
+++ b/XamarinRefit/XamarinRefit/Views/LoginPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ProyectRefit.Views.LoginPage"
+             x:Class="XamarinRefit.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Login">
     <ContentPage.Content>
@@ -73,6 +73,5 @@
             </StackLayout>
 
         </ScrollView>
-
-    </ContentPage.Content>
+ </ContentPage.Content>
 </ContentPage>
