--- a/XamarinRefit/XamarinRefit/Views/ProductPage.xaml
+++ b/XamarinRefit/XamarinRefit/Views/ProductPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ProyectRefit.Views.ProductPage"
+             x:Class="XamarinRefit.Views.ProductPage"
              BindingContext="{Binding Main,Source={StaticResource Locator}}"
              Title="Products">
     <ContentPage.ToolbarItems>
