Add the take a photo and all configure with the plugin xalm plugin media

--- a/XamarinRefit/XamarinRefit/Views/AddProductPage.xaml
+++ b/XamarinRefit/XamarinRefit/Views/AddProductPage.xaml
@@ -12,8 +12,12 @@
                 WidthRequest="100"
                 HeightRequest="100"
                 Margin="0,15"
-                Source="tokephoto"/>
-            <Label
+                Source="{Binding ImageSource}">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding ChangeImageCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+                <Label
                 Margin="0,5"
                 HorizontalOptions="Center"
                 VerticalOptions="Center"
